book-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bookapp
  labels:
    app: bookapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookapp
  template:
    metadata:
      labels:
        app: bookapp
        deployment: bookapp
    spec:
      containers:
        - name: bookapp
          image: 'image-registry.openshift-image-registry.svc:5000/demo/bookapp:latest'
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
