book-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bookapp
  labels:
    app: bookapp
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  selector:
    app: bookapp
    deployment: bookapp
