book-app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bookapp
  labels:
    app: bookapp
spec:
  host: bookapp-book-app-production.apps.rosa-5t9sq.yena.p1.openshiftapps.com
  to:
    kind: Service
    name: bookapp
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
